[gd_scene load_steps=2 format=3 uid="uid://f4bec1qsvxvx"]

[ext_resource type="Script" uid="uid://bbdywn12qe7pi" path="res://Resources/UI/SaveSlotUI.gd" id="1_4h6q2"]

[node name="SaveSlotUI" type="PanelContainer"]
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_4h6q2")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="SlotLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="InfoLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="TimestampLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ButtonContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="SelectButton" type="Button" parent="MarginContainer/VBoxContainer/ButtonContainer"]
layout_mode = 2

[node name="DeleteButton" type="Button" parent="MarginContainer/VBoxContainer/ButtonContainer"]
layout_mode = 2
text = "DELETE"
